fix spacer on smaller screens

--- a/style.css
+++ b/style.css
@@ -397,8 +397,18 @@ font-weight: bold;
 
 .spacer {
   background-color: var(--olt-purple);
-    margin-bottom: 3rem;
-}
+    width: 220px; 
+    aspect-ratio: 220 / 320;
+  }
+
+  .footer-image {
+    display: flex;
+    gap: 3em;
+  }
+
+  .footer-image .image-v-purple {
+    max-width: 1280px;
+  }
 
 .margin-text{
   position: absolute;
@@ -620,6 +630,10 @@ section.past-productions {
     
     .grid-1x2 {
       width: 100%;
+    }
+
+    .spacer {
+      display: none;
     }
     
   }
